     settings" is on and default values were provided.
   * Fixed runtime error due to mismatched function call conventions in
     set_preferences_dir() when built with MSVC++ 2010 and a relative path
     to My Documents was passed with --config-dir in the command line.
   * Changed: Added -Wno-deprecated-register to strict compilation.

Version 1.11.6:
 * Add-ons client:
   * The Description popup displays the selected add-on's dependencies now,
     using color-keyed statuses.
   * Circular dependencies are no longer treated as erroneous in terminal
     output.
 * AI:
   * Micro AIs:
     * New Hang Out Micro AI
     * Any number of Micro AIs can now be combined on the same side
     * Goto MAI: new parameters avoid_enemies=, ignore_units= and ignore_enemy_at_goal=
     * Goto MAI: [filter] is now an optional parameter
     * ca_id is now an optional parameter for all MAIs
     * ca_score is now an optional parameter for almost all MAIs
     * Bug fixes for Patrol, Messenger, Multipack Wolves and all Guardian MAIs
     * [goal] tags in [ai] blocks with turns= or time_of_day= will now work.
 * Campaigns:
   * An Orcish Incursion:
     * New world map.
   * Descent Into Darkness:
     * New world map.
   * Legend of Wesmere:
     * convert to "wmllint: who" magic comments
   * The South Guard:
     * Fixed double "lich found" event in Choice in the Fog
 * Language and i18n:
   * Updated translations: Galician, Japanese, Lithuanian, Russian, Scottish Gaelic
 * Lua API:
   * Added: function wesnoth.find_cost_map().
 * Units:
   * Added description for the Wose race.
 * User interface:
   * Unit ellipses are now automatically updated if a unit gains or loses its ZoC
 * WML engine:
   * If [recall] cannot find a unit to recall, the message is logged at the
     "info" severity level in the "wml" domain (instead of the "error" level in
     the "engine" domain). This means the message will be suppressed by default.